# mobile_ai_localizer

./: .gitignore  LICENSE  README.md  action.yml  local_setup.sh  main.py  requirements.txt  setup.sh
.github/workflows/: pr_flow.yml
config/: constants.py
core/: parser.py  translator.py  writer.py
src/: main.py  pyproject.toml
src/config/: constants.py
src/constants/: constants.py
src/core/: parser.py  translator.py  writer.py
src/core/translator/: entry_processor.py  localizer.py  model_manager.py  translation_processor.py
src/tests/: test_main.py  test_translator.py  test_writer.py
src/tests/translator/: test_entry_processor.py  test_localizer.py  test_model_manager.py  test_translation_processor.py
tests/: test_main.py  test_parser.py  test_translator.py  test_writer.py
